--- a/views/home.templ
+++ b/views/home.templ
@@ -53,7 +53,7 @@ templ Home() {
                     </div>
                     <button type="submit">Decrypt</button>
                 </form>
-                <div id="error-message" style="color: red;"></div>
+                <div id="error-message"></div>
             </section>
         </main>
 
