--- a/views/home.templ
+++ b/views/home.templ
@@ -11,18 +11,14 @@ templ Home() {
     </head>
     <body>
         <header>
-            <h1>Welcome to GoEncrypt</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
+            <img src="/public/goencrypt_logo.png" height="80" width="80">
+            <h1>Welcome to GoEncrypt!</h1>
         </header>
 
         <main>
             <section>
                 <h2>Encrypt Your Data with Ease</h2>
-                <p>GoEncrypt provides you with secure encryption for all your data. Use our tool to encrypt and decrypt your files securely.</p>
+                <p>GoEncrypt provides you with secure encryption for all your data. <br>Use our tool to encrypt and decrypt your files securely.</p>
             </section>
 
             <section>
@@ -31,27 +27,22 @@ templ Home() {
                     <div>
                         <label for="uploadFile">Select file to encrypt:</label>
                         <input type="file" id="uploadFile" name="uploadFile" required>
-                    </div>
-                    <div>
                         <label for="password">Enter password:</label>
                         <input type="password" id="password" name="password" required>
+                        <button type="submit">Encrypt</button>
                     </div>
-                    <button type="submit">Encrypt</button>
-                </form>
-            </section>
 
-            <section>
+                </form>
+
                 <h2>Decrypt a File</h2>
                 <form id="decryptForm" method="post" action="/decrypt" enctype="multipart/form-data" hx-encoding="multipart/form-data" hx-post="/decrypt" hx-on="htmx:responseError:handleDecryptionError" hx-swap="none">
                     <div>
                         <label for="uploadFileDecrypt">Select encrypted file:</label>
                         <input type="file" id="uploadFileDecrypt" name="uploadFile" required>
-                    </div>
-                    <div>
                         <label for="decryptPassword">Enter password:</label>
                         <input type="password" id="decryptPassword" name="password" required>
+                        <button type="submit">Decrypt</button>
                     </div>
-                    <button type="submit">Decrypt</button>
                 </form>
                 <div id="error-message"></div>
             </section>
