--- a/views/download_encrypted.templ
+++ b/views/download_encrypted.templ
@@ -4,5 +4,5 @@ package views
 templ DownloadEncrypted(url string) {
 
     <p>If the URL fails to be generated, wait a few seconds before trying again.</p>
-    <a id="downloadLink" href={templ.URL(url)} download="encrypted_file">Download encrypted file</a>
+    <a id="downloadLink" href={templ.URL(url)} download="encrypted_file" style="color: #7652ba">Download encrypted file</a>
 }
