--- a/views/home.templ
+++ b/views/home.templ
@@ -11,7 +11,7 @@ templ Home() {
     </head>
     <body>
         <header>
-            <img src="/public/goencrypt_logo.png" height="80" width="80">
+            <img src="/public/goencrypt_logo.png" height="80" width="80" alt="">
             <h1>Welcome to GoEncrypt!</h1>
         </header>
 
