--- a/views/home.templ
+++ b/views/home.templ
@@ -19,6 +19,11 @@ templ Home() {
             <section>
                 <h2>Encrypt Your Data with Ease</h2>
                 <p>GoEncrypt provides you with secure encryption for all your data. <br>Use our tool to encrypt and decrypt your files securely.</p>
+                <ol style="font-size: smaller">
+                    <li>Upload a file to be encrypted!</li>
+                    <li>Write down the returned id or download an encrypted copy!</li>
+                    <li >Upload your encrypted copy to decrypt it, or use the id to request that we decrypt the content again! (encrypted files are kept on our servers for 7 days only)</li>
+                </ol>
             </section>
 
             <section>
