--- a/views/home.templ
+++ b/views/home.templ
@@ -18,17 +18,19 @@ templ Home() {
         <main>
             <section>
                 <h2>Encrypt Your Data with Ease</h2>
-                <p>GoEncrypt provides you with secure encryption for all your data. <br>Use our tool to encrypt and decrypt your files securely.</p>
+                <p>GoEncrypt provides you with secure encryption for all your data. <br>Use our tool to encrypt and decrypt your files securely.<br>Encrypted files are kept on our servers for 7 days only.</p>
                 <ol style="font-size: smaller">
-                    <li>Upload a file to be encrypted!</li>
-                    <li>Write down the returned id or download an encrypted copy!</li>
-                    <li >Upload your encrypted copy to decrypt it, or use the id to request that we decrypt the content again! (encrypted files are kept on our servers for 7 days only)</li>
+                    <li>Upload a file to be encrypted. </li>
+                    <li>Upload your encrypted copy to decrypt it, or use the id to request that we decrypt the content again!</li>
                 </ol>
             </section>
 
+
             <section>
+                <hr>
                 <h2>Encrypt a File</h2>
-                <form id="encryptForm" method="post" action="/encrypt" enctype="multipart/form-data" hx-encoding="multipart/form-data" hx-post="/encrypt" hx-target="#encryptionResponsePlaceholder">
+                <p style="font-size: smaller">Write down the returned id or download an encrypted copy!<br>Larger files take longer to process.</p>
+                <form id="encryptForm" hx-encoding="multipart/form-data" hx-post="/encrypt" hx-target="#encryptionResponsePlaceholder">
                     <div>
                         <label for="uploadFile">Select file to encrypt:</label>
                         <input type="file" id="uploadFile" name="uploadFile" required>
@@ -39,6 +41,7 @@ templ Home() {
                     <div id="encryptionResponsePlaceholder"></div>
                 </form>
 
+                <hr>
                 <h2>Decrypt a File</h2>
                 <p style="font-size: smaller">Either upload the encrypted file or submit an id from a previous upload</p>
                 <form id="decryptForm" method="post" action="/decrypt" enctype="multipart/form-data" hx-encoding="multipart/form-data" hx-post="/decrypt" hx-swap="none">
@@ -56,6 +59,19 @@ templ Home() {
                     </div>
                 </form>
                 <div id="error-message"></div>
+
+
+                <hr>
+                <h2>Download encrypted copy</h2>
+                <p style="font-size: smaller">Is your file taking long to process? Come back some other time to download it.</p>
+                <form id="downloadEncryptedForm" method="get" action="/download/encrypted/" enctype="multipart/form-data" hx-encoding="multipart/form-data" hx-target="#downloadEncryptedPlaceholder">
+                    <div>
+                        <label for="fileIdToDownload">Enter file id:</label>
+                        <input type="text" id="fileIdToDownload" name="fileIdToDownload" required>
+                        <button type="submit">Get Download URL</button>
+                    </div>
+                </form>
+                <div id="downloadEncryptedPlaceholder"></div>
             </section>
         </main>
 
@@ -128,6 +144,25 @@ templ Home() {
             document.body.addEventListener('htmx:responseError', function(evt) {
                 var errorMessage = document.getElementById('error-message');
                 errorMessage.textContent = 'Decryption failed: ' + evt.detail.xhr.statusText;
+            });
+        </script>
+        <script>
+            document.getElementById('downloadEncryptedForm').addEventListener('submit', function(event) {
+                event.preventDefault(); // Prevent the form from submitting the traditional way
+                const fileId = document.getElementById('fileIdToDownload').value;
+                const url = `/download/encrypted/${fileId}`;
+
+                fetch(url)
+                    .then(response => response.text()) // Assuming the response is text (HTML)
+                    .then(html => {
+                        // Set the inner HTML of the response div
+                        document.getElementById('downloadEncryptedPlaceholder').innerHTML = html;
+                    })
+                    .catch(error => {
+                        // Handle any errors
+                        console.error('Error:', error);
+                        document.getElementById('downloadEncryptedPlaceholder').innerHTML = `<p>An error occurred. Please try again later.</p>`;
+                    });
             });
         </script>
     </body>
