--- a/views/home.templ
+++ b/views/home.templ
@@ -11,20 +11,15 @@ templ Home() {
     </head>
     <body>
         <header>
-            <img src="/public/goencrypt_logo.png" height="80" width="80" alt="">
+            <img src="/public/goencrypt_logo.png" height="80" width="80" alt="GoEncrypt Logo">
             <h1>Welcome to GoEncrypt!</h1>
         </header>
 
         <main>
-            <section>
+            <section id="welcome-section">
                 <h2>Encrypt Your Data with Ease</h2>
-                <p>GoEncrypt provides you with secure encryption for all your data. <br>Use our tool to encrypt and decrypt your files securely.<br>Encrypted files are kept on our servers for 7 days only.</p>
-                <ol style="font-size: smaller">
-                    <li>Upload a file to be encrypted. </li>
-                    <li>Upload your encrypted copy to decrypt it, or use the id to request that we decrypt the content again!</li>
-                </ol>
+                <p>GoEncrypt provides you with secure encryption for all your data.<br>Encrypted files are kept on our servers for 7 days only.</p>
             </section>
-
 
             <section>
                 <hr>
